fixed nav visibility

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -36,7 +36,7 @@
         right: 6.5rem;
         background-image: radial-gradient($color-primary-light, $color-primary-dark);
         z-index: 1000;
-        transition: transform .6s cubic-bezier(0.86, 0, 0.07, 1);
+        transition: transform .4s cubic-bezier(0.86, 0, 0.07, 1);
 
         @include respond(tab-port) {
             top: 4.5rem;
@@ -58,7 +58,8 @@
         z-index: 1500;
         opacity: 0;
         width: 0;
-        transition: .6s;
+        transition: .4s ease;
+        visibility: hidden;
     }
 
     &__list {
@@ -66,6 +67,7 @@
         list-style: none;
         text-align: center;
         width: 100%;
+        display: inline-block;
     }
 
     &__item {
@@ -85,7 +87,7 @@
             text-transform: uppercase;
             background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50%);
             background-size: 230%;
-            transition: .4s;
+            transition: .2s;
         }
 
         &:hover,
@@ -94,9 +96,7 @@
             color: $color-primary;
             transform: translateX(1rem);
         }
-
     }
-
 
     //FUNCTIONALITY
     &__checkbox:checked~&__background {
@@ -104,10 +104,11 @@
     }
 
     &__checkbox:checked~&__nav {
-        opacity: 1;
         width: 100%;
+        display: inline-block;
+        opacity: 1;
+        visibility: visible;
     }
-
 
     //ICON
     &__icon {
